prevent horizontal scroll

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,6 +36,12 @@
   }
 }
 
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden; /* Prevent horizontal scroll */
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
